# URLAliasService

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  routers.py  schemas.py
app/auth/: auth.py  crud.py  routers.py
app/migration/: env.py
app/migration/versions/: 1c298d3fcd41_initial_revision.py
